# libmrhevdata

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/libmrhevdata_Directory/Version/1/MRH_EvListen_V1/: MRH_EvD_L_SpeechMethod.rst  MRH_EvD_L_StringType.rst
doc/source/Enumerations/libmrhevdata_Directory/Version/1/MRH_EvSay_V1/: MRH_EvD_S_NotificationType.rst  MRH_EvD_S_SpeechMethod.rst  MRH_EvD_S_StringType.rst
doc/source/Enumerations/libmrhevdata_Directory/Version/MRH_EvBase/: MRH_EvD_Base_Result.rst
doc/source/Event_Struct_Data/: Event_Struct_Data.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/libmrhevdata/: MRH_EVD_CreateSetEvent.rst  MRH_EVD_ReadEvent.rst  MRH_EVD_SetEvent.rst
doc/source/Functions/libmrhevdata_Directory/MRH_EvDataRevision/: MRH_GetEvDataLibraryVersionMajor.rst  MRH_GetEvDataLibraryVersionMinor.rst  MRH_GetEvDataLibraryVersionPatch.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvApplication_V1/: MRH_EVD_A_ToData_V1.rst  MRH_EVD_A_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvCustom_V1/: MRH_EVD_C_ToData_V1.rst  MRH_EVD_C_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvListen_V1/: MRH_EVD_L_ToData_V1.rst  MRH_EVD_L_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvNotification_V1/: MRH_EVD_N_ToData_V1.rst  MRH_EVD_N_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvPassword_V1/: MRH_EVD_P_ToData_V1.rst  MRH_EVD_P_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvSay_V1/: MRH_EVD_S_ToData_V1.rst  MRH_EVD_S_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvSystem_V1/: MRH_EVD_SYS_ToData_V1.rst  MRH_EVD_SYS_ToEvent_V1.rst
doc/source/Functions/libmrhevdata_Directory/Version/1/MRH_EvUser_V1/: MRH_EVD_U_ToData_V1.rst  MRH_EVD_U_ToEvent_V1.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/libmrhevdata_Directory/MRH_EvDataRevision/: MRH_EV_DATA_LIB_VERSION_MAJOR.rst  MRH_EV_DATA_LIB_VERSION_MINOR.rst  MRH_EV_DATA_LIB_VERSION_PATCH.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvApplication_V1/: MRH_EVD_A_STRING_LAUNCH_BUFFER_MAX.rst  MRH_EVD_A_STRING_LAUNCH_BUFFER_MAX_TERMINATED.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvListen_V1/: MRH_EVD_L_STRING_BUFFER_MAX.rst  MRH_EVD_L_STRING_BUFFER_MAX_TERMINATED.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvNotification_V1/: MRH_EVD_N_STRING_CREATE_BUFFER_MAX.rst  MRH_EVD_N_STRING_CREATE_BUFFER_MAX_TERMINATED.rst  MRH_EVD_N_STRING_GET_BUFFER_MAX.rst  MRH_EVD_N_STRING_GET_BUFFER_MAX_TERMINATED.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvPassword_V1/: MRH_EVD_P_STRING_BUFFER_MAX.rst  MRH_EVD_P_STRING_BUFFER_MAX_TERMINATED.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvSay_V1/: MRH_EVD_S_NOTIFICATION_BUFFER_MAX.rst  MRH_EVD_S_NOTIFICATION_BUFFER_MAX_TERMINATED.rst  MRH_EVD_S_STRING_BUFFER_MAX.rst  MRH_EVD_S_STRING_BUFFER_MAX_TERMINATED.rst
doc/source/Macros/libmrhevdata_Directory/Version/1/MRH_EvSystem_V1/: MRH_EVD_SYS_STRING_BUFFER_MAX.rst  MRH_EVD_SYS_STRING_BUFFER_MAX_TERMINATED.rst
doc/source/Structs/: Structs.rst
doc/source/Structs/libmrhevdata_Directory/Version/1/MRH_EvApplication_V1/: MRH_EvD_A_LaunchSOATimer_t.rst  MRH_EvD_A_LaunchSOA_t.rst
doc/source/Structs/libmrhevdata_Directory/Version/1/MRH_EvListen_V1/: MRH_EvD_L_GetMethod_S_t.rst  MRH_EvD_L_String_S_t.rst
doc/source/Structs/libmrhevdata_Directory/Version/1/MRH_EvNotification_V1/: MRH_EvD_N_Create_S_t.rst  MRH_EvD_N_Create_U_t.rst  MRH_EvD_N_Destroy_S_t.rst  MRH_EvD_N_Destroy_U_t.rst  MRH_EvD_N_GetNext_S_t.rst
doc/source/Structs/libmrhevdata_Directory/Version/1/MRH_EvPassword_V1/: MRH_EvD_P_String_U_t.rst
doc/source/Structs/libmrhevdata_Directory/Version/1/MRH_EvSay_V1/: MRH_EvD_S_GetMethod_S_t.rst  MRH_EvD_S_Notification_U_t.rst  MRH_EvD_S_RemoteNotification_U_t.rst  MRH_EvD_S_String_S_t.rst  MRH_EvD_S_String_U_t.rst
doc/source/Structs/libmrhevdata_Directory/Version/MRH_EvBase/: MRH_EvD_Base_CustomCommand_t.rst  MRH_EvD_Base_Result_t.rst  MRH_EvD_Base_ServiceAvail_S_t.rst  MRH_EvD_Base_String_t.rst
doc/source/Usage/: Usage.rst
include/libmrhevdata/: libmrhevdata.h
include/libmrhevdata/libmrhevdata/: MRH_EvApplication.h  MRH_EvCustom.h  MRH_EvDataEvent.h  MRH_EvDataRevision.h  MRH_EvListen.h  MRH_EvNotification.h  MRH_EvPassword.h  MRH_EvSay.h  MRH_EvSystem.h  MRH_EvUser.h
include/libmrhevdata/libmrhevdata/Version/: MRH_EvBase.h
include/libmrhevdata/libmrhevdata/Version/1/: MRH_EvApplication_V1.h  MRH_EvCustom_V1.h  MRH_EvListen_V1.h  MRH_EvNotification_V1.h  MRH_EvPassword_V1.h  MRH_EvSay_V1.h  MRH_EvSystem_V1.h  MRH_EvUser_V1.h
src/: libmrhevdata.c
src/libmrhevdata/: MRH_EvDataEvent.c  MRH_EvDataRevision.c
src/libmrhevdata/Version/1/: MRH_EvApplication_V1.c  MRH_EvCustom_V1.c  MRH_EvListen_V1.c  MRH_EvNotification_V1.c  MRH_EvPassword_V1.c  MRH_EvSay_V1.c  MRH_EvSystem_V1.c  MRH_EvUser_V1.c
(+3 files in other folders)
